--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "في قائمة \"الإعدادات المتقدمة\"، انتقل إلى قائمة \"WiFi\" واضغط على زر الإعدادات للدخول. ثم انتقل إلى \"إضافة جهاز\" واضغط على زر الإعدادات للتفعيل.",
     "CL_CF_CS_dw005_pair_step5": "شبكة الجهاز مفتوحة الآن لإضافة جهاز لمدة 3 دقائق.\n انقر فوق التالي للمتابعة.",
     "CL_DV_DW_save_date_invalid": "لا يمكن أن يكون الشهر النهائي أصغر من الشهر الأولي!",
-    "CL_DV_OV_send_to_devices": "إرسال إلى الأجهزة"
+    "CL_DV_OV_send_to_devices": "إرسال إلى الأجهزة",
+    "CL_DV_OV_24_egg_timer": "مؤقت البيض",
+    "CL_DV_OV_24_egg_timer_content": "حدد التكرار ومدة الصوت الذي تسمعه عند انتهاء مؤقت البيض.",
+    "CL_DV_OV_24_finish_sounds": "إنهاء الأصوات",
+    "CL_DV_OV_24_finish_sounds_content": "اختر الفاصل الزمني لتكرار الصوت النهائي.",
+    "CL_DV_OV_search_recipes": "البحث عن الوصفات",
+    "CL_CF_CM_search_history": "سجل البحث"
 }
