--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "Στο μενού \"Προηγμένες ρυθμίσεις\" μεταβείτε στο μενού \"WiFi\" και πατήστε το κουμπί ρυθμίσεων για να εισέλθετε. Στη συνέχεια, μεταβείτε στην «Προσθήκη συσκευής» και πατήστε το κουμπί ρυθμίσεων για ενεργοποίηση.",
     "CL_CF_CS_dw005_pair_step5": "Το δίκτυο συσκευών είναι πλέον ανοιχτό για προσθήκη συσκευής για 3 λεπτά.\n Κάντε κλικ στο ΕΠΟΜΕΝΟ για να συνεχίσετε.",
     "CL_DV_DW_save_date_invalid": "Ο μήνας λήξης δεν μπορεί να είναι μικρότερος από τον μήνα έναρξης!",
-    "CL_DV_OV_send_to_devices": "ΑΠΟΣΤΟΛΗ ΣΤΙΣ ΣΥΣΚΕΥΕΣ"
+    "CL_DV_OV_send_to_devices": "ΑΠΟΣΤΟΛΗ ΣΤΙΣ ΣΥΣΚΕΥΕΣ",
+    "CL_DV_OV_24_egg_timer": "Χρονοδιακόπτης αυγών",
+    "CL_DV_OV_24_egg_timer_content": "Επιλέξτε την επανάληψη και τη διάρκεια του ήχου που ακούτε όταν λήξει ένα χρονόμετρο αυγών.",
+    "CL_DV_OV_24_finish_sounds": "Ήχοι τελειώματος",
+    "CL_DV_OV_24_finish_sounds_content": "Επιλέξτε το διάστημα της επανάληψης του ήχου φινιρίσματος.",
+    "CL_DV_OV_search_recipes": "Αναζήτηση συνταγών",
+    "CL_CF_CM_search_history": "Ιστορικό αναζήτησης"
 }
