--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "در منوی \"تنظیمات پیشرفته\" به منوی \"WiFi\" بروید و دکمه تنظیمات را فشار دهید تا وارد شوید. سپس به «افزودن دستگاه» بروید و دکمه تنظیمات را فشار دهید تا فعال شود.",
     "CL_CF_CS_dw005_pair_step5": "شبکه دستگاه اکنون برای افزودن دستگاه به مدت 3 دقیقه باز است.\n برای ادامه روی NEXT کلیک کنید.",
     "CL_DV_DW_save_date_invalid": "ماه پایانی نمی تواند کوچکتر از ماه شروع باشد!",
-    "CL_DV_OV_send_to_devices": "ارسال به دستگاه ها"
+    "CL_DV_OV_send_to_devices": "ارسال به دستگاه ها",
+    "CL_DV_OV_24_egg_timer": "تایمر تخم مرغ",
+    "CL_DV_OV_24_egg_timer_content": "تکرار و مدت زمان صدایی را که در زمان منقضی شدن تایمر تخم مرغ می شنوید انتخاب کنید.",
+    "CL_DV_OV_24_finish_sounds": "صداهای پایان",
+    "CL_DV_OV_24_finish_sounds_content": "فاصله تکرار صدای پایان را انتخاب کنید.",
+    "CL_DV_OV_search_recipes": "جستجوی دستور غذاها",
+    "CL_CF_CM_search_history": "تاریخچه جستجو"
 }
