--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "בתפריט \"הגדרות מתקדמות\" עבור לתפריט \"WiFi\" ולחץ על כפתור ההגדרות כדי להיכנס. לאחר מכן עבור אל \"הוסף מכשיר\" ולחץ על כפתור ההגדרות כדי להפעיל.",
     "CL_CF_CS_dw005_pair_step5": "רשת המכשיר פתוחה כעת להוספת מכשיר למשך 3 דקות.\n לחץ על NEXT כדי להמשיך.",
     "CL_DV_DW_save_date_invalid": "חודש סוף לא יכול להיות קטן מחודש ההתחלה!",
-    "CL_DV_OV_send_to_devices": "שלח למכשירים"
+    "CL_DV_OV_send_to_devices": "שלח למכשירים",
+    "CL_DV_OV_24_egg_timer": "טיימר ביצים",
+    "CL_DV_OV_24_egg_timer_content": "בחר את החזרה ואת משך הצליל שאתה שומע כאשר טיימר ביצה יפוג.",
+    "CL_DV_OV_24_finish_sounds": "צלילי סיום",
+    "CL_DV_OV_24_finish_sounds_content": "בחר את המרווח של חזרת צליל סיום.",
+    "CL_DV_OV_search_recipes": "חפש מתכונים",
+    "CL_CF_CM_search_history": "היסטוריית חיפושים"
 }
