--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "“उन्नत सेटिंग” मेनू में “वाई-फाई” मेनू पर जाएँ और सेटिंग बटन दबाकर प्रवेश करें। फिर “डिवाइस जोड़ें” पर जाएँ और सक्रिय करने के लिए सेटिंग बटन दबाएँ।",
     "CL_CF_CS_dw005_pair_step5": "डिवाइस नेटवर्क अब डिवाइस जोड़ने के लिए 3 मिनट तक खुला है।\n जारी रखने के लिए अगले पर क्लिक करें।",
     "CL_DV_DW_save_date_invalid": "अंतिम महीना आरंभिक महीने से छोटा नहीं हो सकता!",
-    "CL_DV_OV_send_to_devices": "डिवाइस पर भेजें"
+    "CL_DV_OV_send_to_devices": "डिवाइस पर भेजें",
+    "CL_DV_OV_24_egg_timer": "अंडा टाइमर",
+    "CL_DV_OV_24_egg_timer_content": "अंडे का टाइमर समाप्त होने पर आपको सुनाई देने वाली ध्वनि की पुनरावृत्ति और अवधि का चयन करें।",
+    "CL_DV_OV_24_finish_sounds": "समाप्त ध्वनि",
+    "CL_DV_OV_24_finish_sounds_content": "अंतिम ध्वनि पुनरावृत्ति का अंतराल चुनें.",
+    "CL_DV_OV_search_recipes": "व्यंजन खोजें",
+    "CL_CF_CM_search_history": "खोज इतिहास"
 }
