--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "Во менито „Напредни поставки“ одете во менито „WiFi“ и притиснете го копчето за поставки за да влезете. Потоа одете во „Додај уред“ и притиснете го копчето за поставки за да го активирате.",
     "CL_CF_CS_dw005_pair_step5": "Мрежата на уредот сега е отворена за додавање уред 3 минути.\n Кликнете СЛЕДНО за да продолжите.",
     "CL_DV_DW_save_date_invalid": "Крајниот месец не може да биде помал од почетниот месец!",
-    "CL_DV_OV_send_to_devices": "ИСПРАТИ ДО УРЕДИ"
+    "CL_DV_OV_send_to_devices": "ИСПРАТИ ДО УРЕДИ",
+    "CL_DV_OV_24_egg_timer": "Тајмер за јајца",
+    "CL_DV_OV_24_egg_timer_content": "Изберете го повторувањето и времетраењето на звукот што го слушате кога истекува тајмерот за јајца.",
+    "CL_DV_OV_24_finish_sounds": "Заврши звуци",
+    "CL_DV_OV_24_finish_sounds_content": "Изберете го интервалот на повторување на завршниот звук.",
+    "CL_DV_OV_search_recipes": "Пребарајте рецепти",
+    "CL_CF_CM_search_history": "Историја на пребарување"
 }
