--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "В меню «Расширенные настройки» перейдите в меню «WiFi» и нажмите кнопку настроек для входа. Затем перейдите в «Добавить устройство» и нажмите кнопку настроек для активации.",
     "CL_CF_CS_dw005_pair_step5": "Сеть устройств теперь открыта для добавления устройств в течение 3 минут.\n Нажмите ДАЛЕЕ, чтобы продолжить.",
     "CL_DV_DW_save_date_invalid": "Конечный месяц не может быть меньше начального месяца!",
-    "CL_DV_OV_send_to_devices": "ОТПРАВИТЬ НА УСТРОЙСТВА"
+    "CL_DV_OV_send_to_devices": "ОТПРАВИТЬ НА УСТРОЙСТВА",
+    "CL_DV_OV_24_egg_timer": "Таймер для варки яиц",
+    "CL_DV_OV_24_egg_timer_content": "Выберите повторение и продолжительность звука, который вы услышите по истечении времени на таймере варки яиц.",
+    "CL_DV_OV_24_finish_sounds": "Звуки завершения",
+    "CL_DV_OV_24_finish_sounds_content": "Выберите интервал повторения финального звука.",
+    "CL_DV_OV_search_recipes": "Поиск рецептов",
+    "CL_CF_CM_search_history": "История поиска"
 }
