--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "У меню «Додаткові налаштування» перейдіть до меню «WiFi» і натисніть кнопку налаштувань, щоб увійти. Потім перейдіть до «Додати пристрій» і натисніть кнопку налаштувань, щоб активувати.",
     "CL_CF_CS_dw005_pair_step5": "Мережа пристрою тепер відкрита для додавання пристрою протягом 3 хвилин.\n Натисніть ДАЛІ, щоб продовжити.",
     "CL_DV_DW_save_date_invalid": "Кінцевий місяць не може бути меншим за початковий!",
-    "CL_DV_OV_send_to_devices": "НАДІСЛАТИ НА ПРИСТРОЇ"
+    "CL_DV_OV_send_to_devices": "НАДІСЛАТИ НА ПРИСТРОЇ",
+    "CL_DV_OV_24_egg_timer": "Таймер для яєць",
+    "CL_DV_OV_24_egg_timer_content": "Виберіть повторення та тривалість звуку, який ви чуєте, коли закінчується таймер для яєць.",
+    "CL_DV_OV_24_finish_sounds": "Завершити звуки",
+    "CL_DV_OV_24_finish_sounds_content": "Виберіть інтервал повторення кінцевого звуку.",
+    "CL_DV_OV_search_recipes": "Пошук рецептів",
+    "CL_CF_CM_search_history": "Історія пошуку"
 }
