--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4126,5 +4126,11 @@
     "CL_CF_CS_dw005_pair_step4": "Dans le menu « Paramètres avancés », accédez au menu « WiFi » et appuyez sur le bouton Paramètres pour y accéder. Accédez ensuite à « Ajouter un appareil » et appuyez sur le bouton Paramètres pour l'activer.",
     "CL_CF_CS_dw005_pair_step5": "Le réseau de l'appareil est désormais ouvert pour l'ajout d'appareils pendant 3 minutes.\n Cliquez sur SUIVANT pour continuer.",
     "CL_DV_DW_save_date_invalid": "Le mois de fin ne peut pas être plus petit que le mois de début !",
-    "CL_DV_OV_send_to_devices": "ENVOYER AUX APPAREILS"
+    "CL_DV_OV_send_to_devices": "ENVOYER AUX APPAREILS",
+    "CL_DV_OV_24_egg_timer": "Minuteur à œufs",
+    "CL_DV_OV_24_egg_timer_content": "Sélectionnez la répétition et la durée du son que vous entendez lorsqu'un minuteur expire.",
+    "CL_DV_OV_24_finish_sounds": "Sons de finition",
+    "CL_DV_OV_24_finish_sounds_content": "Choisissez l'intervalle de répétition du son de fin.",
+    "CL_DV_OV_search_recipes": "Rechercher des recettes",
+    "CL_CF_CM_search_history": "Historique de recherche"
 }
